<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/name_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/next_up_what_s_your_name"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/name_TV_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_title_id"
            android:layout_marginTop="60dp"
            android:text="@string/this_is_how_you_ll_appear_on_hugme"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/name_ET_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_TV_id"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="5dp"
            android:paddingStart="3dp"
            android:textSize="16dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="8dp">

            <Button
                android:id="@+id/continue_btn_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/continue_txt"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>